--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,3 @@
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=auro-people
-DB_HOST=127.0.0.1
-DB_PORT=5432
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/auro-people
+DATABASE_URL=postgres://postgres:postgre@localhost:5432/auro-people
+JWT_SECRET=auropeople_secret
+PORT=5000
